# CodeReview

./: .gitignore  README.md  frontend_service.sh  message_service.sh  mongodb.sh  mysql.sh  nginx.sh  pom.xml  post_service.sh  user_service.sh
CSharpUser/: .editorconfig  .gitignore  HELP.md  UserService.sln  user.sql
CSharpUser/UserService.Contract/: PaginationConst.cs  UserConst.cs
CSharpUser/UserService.Dao/: IUserDao.cs  UserDao.cs  UserService.Dao.csproj
CSharpUser/UserService.Misc/: AppCode.cs  ErrMsg.cs  MyTime.cs  MyUtil.cs
CSharpUser/UserService.Misc/FreeSql/: TransactionFreeSql.cs
CSharpUser/UserService.Misc/Serializer/: MyResult.cs
CSharpUser/UserService.Model/Dto/Pagination/: PaginationReqDto.cs  (+1 more)
CSharpUser/UserService.Service/: IUserService.cs  UserService.cs
CSharpUser/UserService.WebApi/: UserService.WebApi.csproj  appsettings.json
CSharpUser/UserService.WebApi/Controllers/: UserController.cs
CSharpUser/UserService.WebApi/Extensions/: EmptyStringAllowedModelMetadataProvider.cs
UserService.Misc/: UserService.Misc.csproj
UserService.Model/: UserService.Model.csproj
UserService.Model/DbTable/: DbUser.cs
UserService.Model/Dto/Pagination/: PaginationResDto.cs
UserService.Service/: UserService.Service.csproj
UserService.WebApi/: Program.cs  appsettings.json
frontend/front/: package-lock.json  package.json
frontend/front/src/: App.js
messaging/: Cargo.toml  test.rest
messaging/src/: main.rs
post/: pom.xml
post/src/main/: request.rest
src/main/: request.rest
src/main/resources/: application.properties
(+27 files in other folders)
