[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde = {version = "1.0", features = ["derive"]}
mongodb = "2.3.1"
futures = "0.3.25"
actix-cors = "0.6.4"